Fix header spacing, use hide-device responsive mode

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
+    justify-content: space-between;
 }
 
 header :first-child {
